# NextFold

./: .gitignore  .pre-commit-config.yaml  README.md  dev.yaml  pyproject.toml  setup.cfg  setup.py
src/nextfold/constants/: README.md  residue_constants.py
src/nextfold/data/: parsers.py
tests/data/: 1gzx.fasta
